<resources>
    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="internal_storage">Internal storage</string>
    <string name="app_name">What Do You Want To Do</string>
    <string name="app_name_audio_file_selector">Audio Picker</string>
    <string name="app_name_image_file_selector">Image Picker</string>
    <string name="app_name_video_file_selector">Video Picker</string>
    <string name="app_name_zip_file_selector">Zip Archive Picker</string>
    <string name="activity_welcome_title">What Do You Want To Do?</string>
    <string name="activity_welcome_show_chessboard">Show Main Table</string>
    <string name="activity_welcome_warning1">Warning: enable WiFy to see YouTube video</string>
    <string name="activity_welcome_info_title">Info</string>
    <string name="activity_welcome_info_message">What Do You Want To Do? version 1.0\nCommunication Board Player and Constructor</string>
    <string name="activity_welcome_info_confirm">OK</string>
    <string name="activity_chessboard_title">What Do You Want To Do?</string>
    <string name="activity_chessboard_action_settings">Settings</string>
    <string name="activity_chessboard_settings_mode">Settings Mode</string>
    <string name="activity_grid_config_title">Configuration</string>
    <string name="activity_grid_config_action_bar_configure">Save and Exit</string>
    <string name="activity_grid_config_action_bar_dismiss_chessboard">Dismiss and Exit</string>
    <string name="activity_grid_config_action_bar_overview">Change Boards</string>
    <string name="activity_grid_config_name_hint">Board Name</string>
    <string name="activity_grid_config_name">Name</string>
    <string name="activity_grid_config_table_name">Communication Board Config</string>
    <string name="activity_grid_config_dimension">Size</string>
    <string name="activity_grid_config_color">Background Color</string>
    <string name="activity_grid_config_border">Border Width</string>
    <string name="activity_grid_config_bottons">Picture Cards Layout</string>
    <string name="activity_grid_config_preview">Preview</string>
    <string name="activity_grid_config_swap_mode">Swap Picture Cards! (2 tap)</string>
    <string name="activity_grid_config_exit_dialog_title">Save?</string>
    <string name="activity_grid_config_exit_dialog_message">Save Communication Board before exit?"</string>
    <string name="activity_grid_config_exit_dialog_yes">Yes</string>
    <string name="activity_grid_config_exit_dialog_no">No</string>
    <string name="activity_grid_config_swap1">another Tap &#8230;</string>
    <string name="activity_grid_config_delete_root_grid">You Can\'t Do That!</string>
    <string name="activity_grid_config_delete_root_grid_message">First board can not be deleted</string>
    <string name="activity_grid_config_delete_root_grid_confirm">OK</string>
    <string name="activity_grid_config_delete_grid">First remove the cards!</string>
    <string name="activity_grid_config_delete_grid_message">First remove the cards then remove communication board</string>
    <string name="activity_grid_config_delete_grid_confirm">OK</string>
    <string name="activity_grid_config_delete_grid_action">Remove the container and contents?</string>
    <string name="activity_grid_config_delete_grid_message_action">Yes</string>
    <string name="activity_grid_config_delete_grid_confirm_action">No</string>
    <string name="activity_cell_grid_config_title">Picture Configuration</string>
    <string name="activity_cell_grid_config_action_bar_configure">Back</string>
    <string name="activity_cell_grid_config_image_text_and_audio">Image and Sound</string>
    <string name="activity_cell_grid_config_cell_name">Picture Config</string>
    <string name="activity_cell_grid_config_name">Name</string>
    <string name="activity_cell_grid_config_name_hint">Picture Name</string>
    <string name="activity_cell_grid_config_color">Background Color</string>
    <string name="activity_cell_grid_config_border_width">Border Width</string>
    <string name="activity_cell_grid_config_border_color">Border Color</string>
    <string name="activity_cell_grid_config_text_size">Text Size</string>
    <string name="activity_cell_grid_config_text_color">Text Color</string>
    <string name="activity_cell_grid_config_text_hint">Write Here</string>
    <string name="activity_cell_grid_config_action_name_link">Link to board</string>
    <string name="activity_cell_grid_config_action_name_separator">oppure</string>
    <string name="activity_cell_grid_config_action_name_activity">Other activities</string>
    <string name="activity_cell_grid_config_action_link_to">Link to board</string>
    <string name="activity_cell_grid_config_action_music_slides">Image Construction</string>
    <string name="activity_cell_grid_config_action_active_listening">Active Listening</string>
    <string name="activity_cell_grid_config_action_play_video">Video Playlist</string>
    <string name="activity_cell_grid_config_choose_image">Choose Image</string>
    <string name="activity_cell_grid_config_choose_audio">Choose Audio</string>
    <string name="activity_cell_grid_config_link_to_back">Target: Previous Board</string>
    <string name="activity_cell_grid_config_tts_message">Write Text To Speech</string>
    <string name="activity_cell_grid_config_tts_message_confirm">OK</string>
    <string name="activity_cell_grid_config_tts_alternative">Or</string>
    <string name="activity_cell_grid_config_tts_message_back">Back</string>
    <string name="activity_cell_grid_config_tts_message_select_audio">Select or Record an Audio File</string>
    <string name="activity_cell_grid_config_override_message1">Link to ### will be replaced</string>
    <string name="activity_cell_grid_config_override_message2">Activity ### will be replaced</string>
    <string name="activity_cell_grid_config_override_message_confirm">OK</string>
    <string name="activity_cell_grid_config_override_message_abort">Back</string>
    <string name="activity_all_grid_view_title">Choose a Communication Boards to Edit</string>
    <string name="activity_all_grid_view_title_selection">Choose the destination Communication Board</string>
    <string name="activity_all_grid_view_back">Back</string>
    <string name="activity_all_grid_view_back_with_no_selection">No Link</string>
    <string name="activity_all_grid_view_new_table_message">Insert New Board Name</string>
    <string name="activity_all_grid_view_new_table_confirm">Create Board</string>
    <string name="activity_all_grid_view_new_table_back">Back</string>
    <string name="activity_abrakadabra_title">Image Construction</string>
    <string name="title_activity_active_listening">Active Listening</string>
    <string name="activity_video_view_title">Video</string>
    <string name="activity_video_view_dafault">Video</string>
    <string name="activity_abrakadabra_config_title">Configure Image Constructor</string>
    <string name="activity_abrakadabra_config_name">Name</string>
    <string name="activity_abrakadabra_config_image_construction">Image Construction</string>
    <string name="activity_abrakadabra_config_final_animation">Animation</string>
    <string name="activity_abrakadabra_config_music">Background Music</string>
    <string name="activity_abrakadabra_config_music_duration">Stop music at</string>
    <string name="activity_abrakadabra_config_sound">Transition Sound</string>
    <string name="activity_abrakadabra_config_sound_button">Sound</string>
    <string name="activity_abrakadabra_config_music_button">Music</string>
    <string name="activity_abrakadabra_config_images">Playlist Images</string>
    <string name="activity_abrakadabra_config_name_default">Write Here</string>
    <string name="activity_abrakadabra_config_default">New Image</string>
    <string name="activity_abrakadabra_config_preview">Preview</string>
    <string name="activity_abrakadabra_config_preview_button">Preview</string>
    <string name="activity_abrakadabra_config_new_image">New Image</string>
    <string-array name="activity_abrakadabra_config_image_effect">
        <item>Nothing</item>
        <item>Ken Burns</item>
    </string-array>
    <string name="activity_abrakadabra_config_warning">Warning</string>
    <string name="activity_abrakadabra_config_warning_message">enter the name and at least one image</string>
    <string name="activity_abrakadabra_config_warning_confirm">OK</string>
    <string name="activity_active_listening_config_title">Configure Active Listening</string>
    <string name="activity_active_listening_config_name">Name</string>
    <string name="activity_active_listening_config_name_default">Name</string>
    <string name="activity_active_listening_config_background">Background image</string>
    <string name="activity_active_listening_config_background_button">Background Image</string>
    <string name="activity_active_listening_config_interval">Listening time</string>
    <string name="activity_active_listening_config_music">Music</string>
    <string name="activity_active_listening_config_registration1">Waiting time</string>
    <string name="activity_active_listening_config_registration">Message</string>
    <string name="activity_active_listening_config_registration_pause">Message Repetition Time</string>
    <string name="activity_active_listening_config_music_playlist">Music Playlist</string>
    <string name="activity_active_listening_config_registration_time">10s</string>
    <string name="activity_active_listening_config_listen_phase">Listening Phase</string>
    <string name="activity_active_listening_config_action_phase">Interaction phase</string>
    <string name="activity_active_listening_config_registration_button">Reinforcement Message</string>
    <string name="activity_active_listening_config_preview">Preview</string>
    <string name="activity_active_listening_config_preview_text">Preview</string>
    <string name="activity_active_listening_config_save">Save</string>
    <string name="activity_active_listening_config_new_music">Add Track</string>
    <string name="activity_active_listening_config_default">Title</string>
    <string name="activity_active_listening_config_warning">Warning</string>
    <string name="activity_active_listening_config_warning_description">enter the name and at least one track</string>
    <string name="activity_active_listening_config_warning_confirm">OK</string>
    <string name="activity_video_view_config_title">Configure Video Playlist</string>
    <string name="activity_general_settings_reset">Restore the Initial Settings</string>
    <string name="activity_general_settings_reset_label">Restore Initial Settings</string>
    <string name="activity_general_settings_main_chessboard">Main Communication Board</string>
    <string name="activity_general_settings_change_main_chessboard">Choose First Board</string>
    <string name="activity_general_settings_share">Export/Import</string>
    <string name="activity_general_settings_share_single">Export  Communication Boards</string>
    <string name="activity_general_settings_share_set">Export a Communication Boards with all Linked Board</string>
    <string name="activity_general_settings_import">Import Communication Boards</string>
    <string name="activity_general_settings_connection_display_tts">Network, Display e Text-To-Speech</string>
    <string name="activity_general_settings_youtube_only_with_wifi">YouTube Video only with Wi-Fi enabled</string>
    <string name="activity_general_settings_fullscreen_mode">Full Screen Mode</string>
    <string name="activity_general_settings_ware_lock_mode">Keep the Screen On</string>
    <string name="content_description">content description</string>
</resources>