<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.whatdoyouwanttodo.WelcomeActivity"
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@+id/show_chessboard_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_main"
        android:onClick="showChessboard"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/activity_welcome_show_chessboard"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/show_chessboard_button"
        android:layout_alignParentBottom="true"
        android:background="@android:color/black"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_config_space_medium"
                android:text="@string/activity_welcome_info_message"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_welcome_warning1"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <!--
        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_description"
            android:onClick="showInfo"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_help_white" />
        -->

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_description"
            android:onClick="openGeneralSettings"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_settings" />
    </LinearLayout>

</RelativeLayout>